--- a/angular-app/src/app/app.html
+++ b/angular-app/src/app/app.html
@@ -1,3 +1,3 @@
-<h1>Hello, {{ title }}</h1>          
+<h1> Deck of Cards </h1>          
 <app-deck-view></app-deck-view>
 <router-outlet></router-outlet>
