--- a/angular-app/src/app/app.html
+++ b/angular-app/src/app/app.html
@@ -1,3 +1,12 @@
-<h1> Deck of Cards </h1>          
-<app-deck-view></app-deck-view>
+<header class="app-header">
+  <div class="logo-title">
+    <img src="assets/logo.png" alt="Ace Of Spades" class="app-logo" />
+    <h1>Deck of Cards</h1>
+  </div>
+</header>
+
+<main class="app-container">
+  <app-deck-view></app-deck-view>
+</main>
+
 <router-outlet></router-outlet>
