fix(ui): small div tweaks

--- a/angular-app/src/app/features/deck-view/deck-view.component.html
+++ b/angular-app/src/app/features/deck-view/deck-view.component.html
@@ -46,7 +46,7 @@
         [class.shuffling]="isShuffling"
       />
       <div *ngIf="deck.length === 0" class="deck-placeholder">
-        <span>OUT OF CARDS</span>
+        <span>EMPTY</span>
       </div>
     </div>
   </div>
